src/test/deca/syntax/invalid/homemade/test/test_pars_inv_affectation_float_trop_petit1.deca
{
    float x  = 0.7e-47;
}